Make list monitor remove button reachable and fix overlapping

--- a/src/components/monitor/monitor.css
+++ b/src/components/monitor/monitor.css
@@ -85,7 +85,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
     overflow-x: hidden;
     height: calc(100% - 44px);
 }
@@ -160,7 +159,7 @@
 .remove-button {
     position: absolute;
     top: 4px;
-    right: 3px;
+    right: 6px;
     cursor: pointer;
     color: $ui-white;
 }
